chore: First migration for StagingDbContext

--- a/BE-membership-connect/appsettings.Staging.json
+++ b/BE-membership-connect/appsettings.Staging.json
@@ -6,7 +6,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=sqlserver;Database=membership;User=sa;Password=Password123;"
+		"DefaultConnection": "Host=db-service;Database=container-db;Port=5432;User=postgres;Password=postgres;"
 	},
 	"AllowedHosts": "*"
 }
