--- a/kubernetes/postgres-statefulset.yml
+++ b/kubernetes/postgres-statefulset.yml
@@ -4,7 +4,7 @@ metadata:
   name: postgres
   namespace: mc-namespace
 spec:
-  serviceName: 'postgres'
+  serviceName: 'db-service'
   replicas: 2
   selector:
     matchLabels:
@@ -15,7 +15,7 @@ spec:
         app: postgres
     spec:
       containers:
-        - name: postgres
+        - name: container-db
           image: postgres:latest
           ports:
             - containerPort: 5432
