--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      # Check out the repository so that the Kubernetes manifests are available
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
         with:
@@ -25,3 +29,4 @@ jobs:
           kubectl apply -f kubernetes/postgres-statefulset.yml
           kubectl apply -f kubernetes/ingress.yml
           kubectl apply -f kubernetes/secret.yml
+
