--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Kubernetes Cluster
+name: Deploy to Local Kubernetes Cluster
 
 on:
   push:
@@ -7,35 +7,14 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # GitHub-hosted runner
+    runs-on: self-hosted 
+
     steps:
-      # Check out the code
-      - name: Check out the repository
-        uses: actions/checkout@v2
+      - name: Check out
+      - uses: actions/checkout@v2  # Check out the repository
 
-      # Install k3d
-      - name: Install k3d
-        run: |
-          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
-
-      # Create a k3d cluster
-      - name: Create k3d cluster
-        run: |
-          k3d cluster create mc-cluster --api-port 6550 -p "80:80@loadbalancer" --agents 2
-
-      # Wait for cluster to be ready
-      - name: Wait for Kubernetes cluster
-        run: |
-          kubectl wait --for=condition=ready pod -n kube-system --all --timeout=120s
-
-      # Set up kubectl (already available in GitHub runner)
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v1
-        with:
-          version: 'latest'
-
-      # Deploy to the cluster
-      - name: Deploy to Kubernetes
+      # Apply Kubernetes manifests to your local cluster
+      - name: Apply Kubernetes manifests
         run: |
           kubectl apply -f kubernetes/namespace.yml
           kubectl apply -f kubernetes/backend-deployment.yml
@@ -43,9 +22,3 @@ jobs:
           kubectl apply -f kubernetes/postgres-statefulset.yml
           kubectl apply -f kubernetes/ingress.yml
           kubectl apply -f kubernetes/secret.yml
-
-      # Optionally, wait for the deployment to be ready
-      - name: Wait for Deployment
-        run: |
-          kubectl rollout status deployment/backend-deployment -n mc-namespace
-          kubectl rollout status deployment/frontend-deployment -n mc-namespace
