--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,28 @@
-name: Deploy to Local Kubernetes Cluster
+name: Deploy to Kubernetes Cluster
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Backend CI/CD Pipeline", "Frontend CI/CD Pipeline"]
+    types:
+      - completed
 
 jobs:
   deploy:
-    runs-on: self-hosted 
-
+    runs-on: self-hosted  
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Check out
-      - uses: actions/checkout@v2  # Check out the repository
+      # Check out the code
+      - name: Check out the repository
+        uses: actions/checkout@v2
 
-      # Apply Kubernetes manifests to your local cluster
-      - name: Apply Kubernetes manifests
+      # Set up kubectl
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v1
+        with:
+          version: 'latest'
+
+      # Ensure the cluster is accessible
+      - name: Deploy to Kubernetes
         run: |
           kubectl apply -f kubernetes/namespace.yml
           kubectl apply -f kubernetes/backend-deployment.yml
