--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -37,5 +37,5 @@ jobs:
       # Build and push the backend Docker image
       - name: Build and push Backend image
         run: |
-          docker build -t acrmembershipconnect.azurecr.io/backend-image:latest -f BE-membership-connect/Dockerfile .
+          docker build -t acrmembershipconnect.azurecr.io/backend-image:latest -f BE-membership-connect/Dockerfile BE-membership-connect
           docker push acrmembershipconnect.azurecr.io/backend-image:latest
