--- a/kubernetes/frontend-deployment.yml
+++ b/kubernetes/frontend-deployment.yml
@@ -18,8 +18,12 @@ spec:
       containers:
         - name: frontend-container
           image: acrmembershipconnect.azurecr.io/frontend-image:latest
+          env:
+            - name: REACT_APP_API_BASE_URL
+              value: 'http://membershipconnect'
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
