--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: localhost
+    - host: membershipconnect
       http:
         paths:
           - path: /Memberships
