--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: postgres-db-container
     restart: always
     environment:
-      DB_NAME: container-db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_PORT: 5432
+      DB_NAME: ${CDB_NAME}
+      DB_USER: ${CDB_USER}
+      DB_PASSWORD: ${CDB_PASSWORD}
+      DB_PORT: ${CDB_PORT}
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
@@ -22,10 +22,8 @@ services:
     container_name: backend-container
     depends_on:
       - db-service
-    environment:
-      ASPNETCORE_ENVIRONMENT: Staging
-      ASPNETCORE_URLS: 'http://+:5000;'
-      ConnectionStrings__DefaultConnection: 'Host=db-service;Port=5432;Database=container-db;Username=postgres;Password=postgres;'
+    env_file:
+      - .env
     ports:
       - '5000:5000'
     networks:
